Revision history for Padre-Plugin-SpellCheck
1.23    2012.TBA
    - fix plugin_enable school boy error (BOWTIE)
    - fix the config DB to check on enable for past and new install (BOWTIE)
    - Bump version to 1.23 (BOWTIE)
    - added Text::Hunspell (BOWTIE)
    - Update Status info in Checker to show dictionary and lanaguage (ALIAS)(BOWTIE)

1.22    2012.02.22
	- remove dead code in plugin_icon method (ZENOG)
	- Upgraded to use wxFormBuilder-based forms (BOWTIE)
	- revert-> Added missing Data::Printer dependency (AZAWAWI)<-(BOWTIE)
	- Access to Preferences is now via Plugin Manager (BOWTIE)
	- Preferences now displays language name rather than ISO code (BOWTIE)
	- use Padre Locale for dictionary names from ISO code (BOWTIE)
	- Start on adding some tests, as there are none (BOWTIE)
	- Preferences now shows and saves Aspell and Hunspell local dictionaries (BOWTIE)

1.21   2010.12.06
        - Restored missing POT/PO translation sources (Damyan Ivanov, AZAWAWI)
        - rename method 'spell_preferences' to 'plugin_preferences',
          so that the dialog can also be called from the plugin manager (ZENOG)
        - add support for some filters (XML, HTML, LaTeX) (ZENOG)
        - fix encoding information in German translation file: ASCII to UTF-8
          #1070 (ZENOG)

1.2    2010.10.29
        - Removed Test::NeedsDisplay dependency (AZAWAWI)

1.1.3  2010.10.27
        - Compatibility with the latest Padre (ZENOG, AZAWAWI)
        - Added German translation (ZENOG)
        - Added Japanese translation (ISHIGAKI)
        - Fixed translations in share directory and removed old one(AZAWAWI)
        - Switched to Dist::Zilla (AZAWAWI)
        - t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)

1.1.2 2009.6.20
        - Add Chinese (Traditional) translation (bluet)
        - spanish translation added (brunov)
        - remove .po files from MANIFEST.SKIP, they are needed for Debian